Start moving storage